Changed Composer package name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "brajox/pay-by-bill",
+    "name": "brajox/paybybill",
     "description": "API client for PayByBill.com",
     "license": "MIT",
     "authors": [
